syntax = "proto3";

package services.scrum_team.v1;

option go_package = "github.com/tennashi/semer/proto/gen/services/scrum_team/v1;scrum_team";

service ScrumTeamManager {
  rpc FindTeamByID(FindTeamByIDRequest) returns (FindTeamByIDResponse) {}
}

message ScrumTeam {
  uint64   id            = 1;
  repeated User dev_team = 2;

  message User {
    uint64 id = 1;
  }
  User prod_owner   = 3;
  User scrum_master = 4;
}

message FindTeamByIDRequest {
  uint64 team_id = 1;
}

message FindTeamByIDResponse {
  ScrumTeam team = 1;
}
